# pagavcs

./: CLI.md  ChecksumMismatchWhileUpdating.md  Features.md  IconsInTheNautilusContextMenu.md  ManualInstall.md  PagaVCS14Series.md  ProblemPagaVCS1411Release.md  ProjectHome.md  README.md  Release  Release.gpg  Summary.md  Version.md  contribute.md  pagavcs_1.4.26_all.deb  version.sh
binary/: Release  Release.gpg  pagavcs-repo_1.0.0ubuntu_all.deb  pagavcs_1.3.35ubuntu_all.deb
branches/1.6/thunar-pagavcs/src/: Makefile  Makefile.am  pagavcs-provider.c
branches/1.7/: ubuntu-distros.txt  version.sh
branches/1.7-dev/: ubuntu-distros.txt  version.sh
branches/1.7-dev/c/: Makefile.in  configure.ac
branches/1.7-dev/c/src/: Makefile  Makefile.in  build.sh  pagavcs.c
branches/1.7-dev/nautilus-pagavcs/src/: Makefile  Makefile.am  Makefile.in  nautilus-pagavcs-provider.c  nautilus-pagavcs-provider.h
branches/1.7-dev/nautilus-pagavcs/src/.deps/: libnautilus_pagavcs_la-nautilus-pagavcs-provider.Plo  libnautilus_pagavcs_la-nautilus-pagavcs.Plo
c/: Makefile  Makefile.in  config.status
c/src/: Makefile.am  pagavcs.c
debbuild/: build.sh
debbuild-bigmem/debian/: control  install
debbuild-mugcommander/: common.sh
debbuild-mugcommander-gnome-extension/debian/: changelog
debbuild-mugcommander-pagavcs-17-extension/: common.sh
debbuild-mugcommander-pagavcs-17-extension/debian/: changelog
debbuild-mugcommander-pagavcs-extension/: common.sh
debbuild-mugcommander-pagavcs-extension/debian/: control
debbuild-mugcommander/debian/: changelog  install
debbuild-pagavcs-bigmem/: common.sh
debbuild-pagavcs-bigmem/debian/: control
debbuild-pagavcs-cli/: build-deb.sh  common.sh
debbuild-pagavcs-cli/debian/: changelog  control
debbuild-pagavcs-core-libs-template/: all-upload-ppa.sh  common.sh
debbuild-pagavcs-core-libs-template/debian/: changelog
debbuild-pagavcs-core-template/: INSTALL
debbuild-pagavcs-core-template/debian/: changelog  control
debbuild-pagavcs-nautilus-template/: all-upload-ppa.sh  common.sh
debbuild-pagavcs-nautilus-template/debian/: changelog  control  install
debbuild-pagavcs-nemo-template/: common.sh
debbuild-pagavcs-nemo-template/debian/: control  install
debbuild-pagavcs-template/: INSTALL  common.sh
debbuild-pagavcs-template/debian/: changelog  control  install  postinst
debbuild-pagavcs-thunar/: common.sh
debbuild-pagavcs-thunar/debian/: changelog  control
debbuild-template/: build-deb.sh  build.sh  upload-ppa.sh
debbuild/debian/: changelog  install
doc/: AUTHORS  MAINTAINERS
java/: .classpath  .project  PagaVCS.launch  build.sh  build.xml  converticons.sh
nautilus-pagavcs/: Makefile  Makefile.in  autogen.sh  config.h  config.status  configure.in  libtool
pagavcs-debbuild/: Readme.txt  build.sh  install.sh  ppa.sh  rules  upload-ppa.sh
pagavcs-repo-debbuild/: build.sh
repo/: pagavcs-archive.key  updateRepo.sh
scripts/: mugcommander  mugcommander.desktop  pagavcs  pagavcs-bigmem  pagavcs-nautilus.py
testdir/: a
thunar-pagavcs/: .cproject  .project  Makefile  Makefile.in  config.status  configure.ac  libtool
thunar-pagavcs/src/: Makefile  Makefile.in  pagavcs-provider.h  pagavcs-svn-action.c  pagavcs-svn-action.h
thunar-pagavcs/src/.deps/: thunar_pagavcs_la-pagavcs-provider.Plo
thunar-pagavcs/src/.libs/: thunar_pagavcs.lai
trunk-mugcommander-pagavcs-extension/: build.xml
wiki/: CLI.wiki  ChecksumMismatchWhileUpdating.wiki  Features.wiki  FeaturesCommit.wiki  FeaturesUpdate.wiki  IconsInTheNautilusContextMenu.wiki  ManualInstall.wiki  NoNautiluscontextmenuicons.wiki  PagaVCS14Series.wiki  ProblemPagaVCS1411Release.wiki  Summary.wiki  Version.wiki  contribute.wiki
(+1025 files in other folders)
